making zoom controls visible in print mode. Fixes #77

--- a/media/compass/css/compass.css
+++ b/media/compass/css/compass.css
@@ -236,6 +236,7 @@ body {
 .ofr div.olControlZoom {
 	background: transparent\9; /* for IE8 ? */
 	background: rgba(255,255,255,0);
+	visibility: visible;
 }
 
 .ofr div.olControlZoom a {
